--- a/main.bib
+++ b/main.bib
@@ -39,3 +39,26 @@
     year         = {1985},
     url          = {https://srd.nist.gov/JPCRD/jpcrdS1V14.pdf}
 }
+
+@article{bib:RiceHerzfeld,
+    title        = {The Thermal Decomposition of Organic Compounds from the Standpoint of Free Radicals. VI. The Mechanism of Some Chain Reactions},
+    author       = {F. O. Rice and K. F. Herzfeld},
+    journaltitle = {J. Am. Chem. Soc.},
+    volume       = {56},
+    number       = {2},
+    pages        = {284-289},
+    year         = {1934},
+    doi          = {10.1021/ja01317a006}
+}
+
+@article{bib:EusufLaidler,
+    title        = {Kinetics and Mechanisms of the Thermal Decomposition of Acetaldehyde: I. The Uninhibited Reaction},
+    author       = {M. Eusuf and K. J. Laidler},
+    journaltitle = {Can. J. Chem.},
+    volume       = {42},
+    number       = {8},
+    pages        = {1851-1860},
+    month        = {August},
+    year         = {1964},
+    doi          = {10.1139/v64-276}
+}
